<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".OTP">

    <ImageView
        android:id="@+id/back"
        android:clickable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:focusable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:layout_marginTop="40dp"
        android:textSize="22sp"
        android:layout_marginStart="15dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        app:cardElevation="10dp"
        android:layout_marginTop="25dp">

        <EditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingHorizontal="20dp"
            android:paddingVertical="7dp"
            android:fontFamily="sans-serif-medium"
            android:inputType="number"
            android:letterSpacing="0.6"
            android:textSize="17sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_6_digit_code"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/no_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_917228996550"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="70dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/sms" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp"
            android:layout_marginStart="15dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_baseline_edit_24" />

        <TextView
            android:id="@+id/edit_my_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_my_phone_number"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <include layout="@layout/button_next" />


</LinearLayout>