<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".aboutYou">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/about_you"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:gravity="center">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:cardCornerRadius="80dp"
            app:cardBackgroundColor="@color/white"
            android:clickable="true"
            android:focusable="true"
            app:strokeColor="@color/pink"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/male">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="-10dp"
                android:src="@drawable/man"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"
                android:layout_gravity="bottom |center_horizontal"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:cardCornerRadius="80dp"
            android:layout_marginStart="30dp"
            app:cardBackgroundColor="@color/white"
            app:strokeColor="@color/pink"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/female">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="-10dp"
                android:src="@drawable/woman"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_gravity="bottom |center_horizontal"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="10dp" />


        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        app:cardElevation="10dp"
        android:layout_marginTop="65dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:hint="@string/your_name"
            android:inputType="text"
            android:textSize="17sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        app:cardCornerRadius="10dp"
        android:elevation="10dp"
        app:cardElevation="10dp"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:clickable="true"
            android:hint="@string/your_birth_year"
            android:textSize="17sp" />

    </androidx.cardview.widget.CardView>

    <include layout="@layout/button_next" />


</LinearLayout>