<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context=".music_play">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8">

            <ImageView
                android:id="@+id/back_home"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/back"
                android:focusable="true" />


        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            android:layout_weight="1.2"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="300dp"
            android:id="@+id/song_poster"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_pic" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/song_name"
        android:id="@+id/song_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:weightSum="3"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/time1"
            android:text="@string/_01_55"
            android:layout_weight="0.4"
            android:textColor="@color/lightWhite" />

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.2"
            android:layout_gravity="center"
            android:progressDrawable="@drawable/seekbar_style"
            android:progress="65"
            android:thumb="@drawable/custom_thumb"
            android:splitTrack="false"
            android:maxHeight="5dp"
            android:id="@+id/seekbar" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/time2"
            android:text="@string/_03_25"
            android:gravity="end"
            android:layout_weight="0.4"
            android:textColor="@color/lightWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:weightSum="3"
        android:layout_marginHorizontal="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/back"
                android:src="@drawable/backward"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="40dp"
                android:elevation="10dp"
                android:id="@+id/playcon"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                app:cardBackgroundColor="@color/pink">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:id="@+id/play"
                    android:src="@drawable/forward" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/forward"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:src="@drawable/fastforward" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>